etcd/etcd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd
  namespace: etcd
  labels:
    app: etcd
spec:
  ports:
    - name: etcd
      port: 2379
      targetPort: 2379
      protocol: TCP
  selector:
    app: etcd
  type: ClusterIP
